# doorkeeper-controller

./: LICENSE  README.md  card_reader.sh  fuck-systemd.sh  open_door.py  pyproject.toml  relay-test.py  requirements.txt  verify_uin.php
card-reader-holder-3d-models/: card-head-holder4.blend  updated-parta.SLDPRT  updated-parta.STL  updated-partb.SLDPRT  updated-partb.STL
open_door/: __init__.py  __main__.py  open_door.py
server/: index.php
